# synalinks

./: .gitignore  404.html  LLM.md  README.md  TELEMETRY.md  api_gen.py  dataset.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  synalinks_mcp_implementation.py  synalinks_mcp_math_agent.py
.github/workflows/: docs.yml  tests.yml
FAQ/: index.html
Introduction/: index.html
demo/: .env.backend  docker-compose.yaml
docs/: FAQ.md  Introduction.md  index.md
examples/: test.py
mcp_optimization/: agent_optimization.py  dataset.json  math_server.py  mcp_checkpoint.py  status_server.py
my-project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  synalinks_project.json
my-project/datasets/: README.md  x_test.json  x_train.json  y_test.json  y_train.json
my-project/my_project/src/: main.py  version.py
my-project/my_project/src/data_models/: __init__.py  answer.py  query.py
my-project/my_project/src/modules/: __init__.py  answer_with_chain_of_thought.py
my-project/my_project/src/tools/: README.md
my-project/scripts/: README.md  train.py
notebooks/: control_flow.py  conversational_applications.py  first_programs.py  first_steps.py  implementing_custom_modules_and_programs_via_subclassing.py  rewards_metrics_and_optimizers.py  test_checkpoint.program.json  training_programs.py
search/: search_index.json
shell/: api_gen.sh  doc.sh  format.sh  install.sh  install_doc.sh  lint.sh  publish.sh  purge_docker.sh  stop_docker.sh  test.sh  upgrade.sh  uv.sh
stylesheets/: extra.css
synalinks/: __init__.py
(+292 files in other folders)
